connectyaml file changes 1

--- a/service/.env.example
+++ b/service/.env.example
@@ -1,5 +1,6 @@
-CTP_CLIENT_ID=DVGTtKvMXFFfKkK0J2jZqcyL
-CTP_CLIENT_SECRET=K9STS56MdAq80JdxoIuKVUHo7IVgCgZG
-CTP_PROJECT_KEY=changecx-demo
-CTP_SCOPE=manage_scope:changecx-demo
-CTP_REGION=us-central1.gcp
+CTP_CLIENT_ID=
+CTP_CLIENT_SECRET=
+CTP_PROJECT_KEY=
+CTP_SCOPE=
+CTP_REGION=
+CTP_AUTH_URL=
