--- a/connect.yaml
+++ b/connect.yaml
@@ -3,18 +3,23 @@ deployAs:
     applicationType: service
     endpoint: /service
     scripts:
-      postDeploy: npm install && npm run build && npm run connector:post-deploy
-      preUndeploy: npm install && npm run build && npm run connector:pre-undeploy
+      postDeploy: npm install && npm run connector:post-deploy
+      preUndeploy: npm install && npm run connector:pre-undeploy
     configuration:
       standardConfiguration:
-        - key: us-central1.gcp
-          description: commercetools Composable Commerce API region
+        - key: CTP_PROJECT_KEY
+          description: Project key of the commercetools Composable Commerce Project
+          required: true
+          default: 'default-key'
+        - key: CTP_REGION
+          description: Region where the commercetools Composable Commerce Project is hosted
+          required: true
       securedConfiguration:
-        - key: changecx-demo
-          description: commercetools Composable Commerce project key
-        - key: DVGTtKvMXFFfKkK0J2jZqcyL
-          description: commercetools Composable Commerce client ID
-        - key: K9STS56MdAq80JdxoIuKVUHo7IVgCgZG
-          description: commercetools Composable Commerce client secret
-        - key: manage_scope:changecx-demo
-          description: commercetools Composable Commerce client scope
+        - key: CTP_CLIENT_ID
+          description: client_id of an API Client for the commercetools Composable Commerce Project
+          required: true
+        - key: CTP_CLIENT_SECRET
+          description: secret of an API Client for the commercetools Composable Commerce Project
+          required: true
+        - key: CTP_SCOPE
+          description: scope of an API Client for the commercetools Composable Commerce Project
