--- a/connect.yaml
+++ b/connect.yaml
@@ -23,3 +23,5 @@ deployAs:
           required: true
         - key: CTP_SCOPE
           description: scope of an API Client for the commercetools Composable Commerce Project
+        - key: CTP_AUTH_URL
+          description: auth url of the commercetools Composable Commerce Project
